Fixed columns height on mobile.

--- a/css/mycss.css
+++ b/css/mycss.css
@@ -9,6 +9,7 @@ html, body {
 .colsx {
     background-color: white;
     max-width: 25%;
+    min-height: 100% !important;
 }
 
 .coldx {
@@ -16,6 +17,7 @@ html, body {
     color: black;
     padding-top: 250px;
     padding-left: 50px;
+    min-height: 100% !important;
 }
 
 .welcome {
